kube/hat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hat-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hat-service
  template:
    metadata:
      labels:
        app: hat-service
    spec:
      containers:
        - name: hat-service
          image: ${REGISTRY}/tinyhats_reinvent/hat-service
          ports:
            - containerPort: 1337
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hat-service
spec:
  selector:
    app: hat-service
  ports:
    - port: 80
      targetPort: 1337
  type: ClusterIP
