kube/locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust-service
  template:
    metadata:
      labels:
        app: locust-service
    spec:
      containers:
        - name: locust-service
          image: ${REGISTRY}/tinyhats_reinvent/locust-service
          ports:
          - containerPort: 5557
            name: comm
          - containerPort: 5558
            name: comm-plus-1
          - containerPort: 8089
            name: web-ui
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: locust-service
spec:
  selector:
    app: locust-service
  ports:
    - port: 80
      targetPort: 8089
      nodePort: 31002
  type: NodePort
