kube/moderate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderate-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderate-service
  template:
    metadata:
      labels:
        app: moderate-service
    spec:
      containers:
        - name: moderate-service
          image: ${REGISTRY}/tinyhats_reinvent/moderate-service
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: moderate-service
spec:
  selector:
    app: moderate-service
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
